<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bottom_action_bar_bg"
    android:elevation="2dp"
    android:orientation="horizontal"
    android:translationY="100dp"
    android:visibility="visible">

    <ImageButton
        android:id="@+id/photo_library_imageButton"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_action_bar_bg"
        android:clickable="true"
        android:contentDescription="@string/photo_library"
        android:focusable="true"
        android:src="@drawable/ic_photo_library" />

    <ImageButton
        android:id="@+id/slideshow_imageButton"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_action_bar_bg"
        android:clickable="true"
        android:contentDescription="@string/slideshow"
        android:focusable="true"
        android:src="@drawable/ic_slideshow" />

    <ImageButton
        android:id="@+id/edit_category_imageButton"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_action_bar_bg"
        android:clickable="true"
        android:contentDescription="@string/edit_category"
        android:focusable="true"
        android:src="@drawable/ic_edit" />

    <ImageButton
        android:id="@+id/delete_category_imageButton"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_action_bar_bg"
        android:clickable="true"
        android:contentDescription="@string/delete_category"
        android:focusable="true"
        android:src="@drawable/ic_delete"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>