<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoLibraryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/photo_library_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/app_backgroundColor"
        android:minHeight="?attr/actionBarSize"
        android:paddingVertical="15dp"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/arrow_back_photo_library_toolbar_imageButton"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/arrow_back_toolbar_imagebutton"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/toolbar_category_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/toolbar_selected_images_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/toolbar_actions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/slideshow_toolbar_imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/slideshow_toolbar_imagebutton"
                android:src="@drawable/ic_slideshow" />

            <ImageButton
                android:id="@+id/delete_toolbar_imageButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete_toolbar_imagebutton"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/photo_library_toolbar"
        android:layout_marginTop="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/app_backgroundColor"
        android:contentDescription="@string/fab_add"
        android:src="@drawable/ic_fab_add_action" />

</RelativeLayout>