<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/app_backgroundColor"
        android:minHeight="?attr/actionBarSize"
        android:paddingVertical="15dp"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_backgroundColor"
            android:fontFamily="sans-serif-medium"
            android:text="@string/bakery_more"
            android:textAlignment="center"
            android:textColor="#212121"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category_textView"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_category">

            <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/main_add_category"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_fab_add_action"
                    app:riv_corner_radius="20dp"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_categories_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_next_bg_with_opacity"
            android:enabled="false"
            android:padding="18dp"
            android:text="@string/next_button"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/main_bottom_action_bar"
        layout="@layout/bottom_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center" />

</LinearLayout>